# GPTCloneBench

./: .gitignore  LICENSE  README.md  c_validate_clone.txt  create_clones_file_ms.py  create_clones_for_gptclonebench.py  crossL_file_creation_for_validateClones.py  cross_language_process.py  cross_language_process_config.txt  cs_validate_clone.txt  distinctive_config.txt  distinctive_run_nicad.py  file_creation_for_validateClones.py  java_validate_clone.txt  process_semanticbench_config.txt  process_semanticclonebench.py  py_validate_clone.txt  pyproject.toml  requirements.txt  run_nicad.py  standalone_clone_injection.py
gptclonedata/python/: Gpt3D_Clone213.py
